add RecurTask create-method
